--- a/vignettes/articles/try-coresoi-w-your-data.Rmd
+++ b/vignettes/articles/try-coresoi-w-your-data.Rmd
@@ -5,7 +5,8 @@ title: "Try `coresoi` with you own data"
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  eval = FALSE
 )
 ```
 
