renamed articles and vignettes!

--- a/vignettes/articles/tryCoresoiWithYourData.Rmd
+++ b/vignettes/articles/tryCoresoiWithYourData.Rmd
@@ -5,8 +5,7 @@ title: "Try `coresoi` with you own data"
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>",
-  eval = FALSE
+  comment = "#>"
 )
 ```
 
